# controllers/request.js
@@ -41,9 +41,11 @@ const getSingleRequest = async (req, res, next) => {
 const addRequest = async (req, res) => {
   res.setHeader('Content-Type', 'application/json');
   const request = {
-    date: req.body.date,
-    description: req.body.description,
-    rating: req.body.rating
+    title: req.body.title,
+    author: req.body.author,
+    requestor: req.body.requestor,
+    email: req.body.email,
+    date: req.body.date
   };
   if(!validator.validateInt(request.isbn)){
       res.status(500).json('There was an error while adding the request with the ISBN.');
@@ -69,9 +71,11 @@ const updateRequest = async (req, res) => {
     }
     const requestID = new ObjectId(req.params.id);
     const request = {
-      date: req.body.date,
-      description: req.body.description,
-      rating: req.body.rating
+      title: req.body.title,
+      author: req.body.author,
+      requestor: req.body.requestor,
+      email: req.body.email,
+      date: req.body.date
     };
     const response = await mongodb
       .getDb()
@@ -95,7 +99,7 @@ const updateRequest = async (req, res) => {
         res.status(400).json('That is not a valid ID. Please try again.');
     }
     const requestID = new ObjectId(req.params.id);
-    const response = await mongodb.getDb().db('project').collection('requests').remove({ _id: requestID}, true);
+    const response = await mongodb.getDb().db('project').collection('requests').deleteOne({ _id: requestID}, true);
     console.log(response);
     if (response.deletedCount > 0) {
       res.status(204).send();
